--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,18 +1,17 @@
-/* 
-   Esto es un comentario
-*/
-*{
+/* Este es un archivo para CSS  */
+
+* {
     margin: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: whitesmoke;
     font-family: sans-serif;
-    padding: 80px 20px 0;
-    
+    padding: 80px 20px 0 0;
 }
 
-.header{
+.header {
     background-color: #076af0;
     height: 80px;
     position: fixed;
@@ -21,8 +20,8 @@ body{
     width: 100%;
 }
 
-.aside{
-     background-color: aqua;
+.aside {
+    background-color: aqua;
     position: fixed;
     top: 80px;
     left: 0;
@@ -30,42 +29,102 @@ body{
     width: 20%;
 }
 
-.contenido{ 
+.contenido {
     background-color: burlywood;
     position: fixed;
     top: 80px;
     left: 20%;
+    right: 0;
     bottom: 20px;
-    width: 80%;
-    overflow:scroll;
-    
+    overflow: scroll;
 }
-.footer{
+
+.footer {
     background-color: black;
     color: white;
-    text-align:center;
-    position: fixed;
-    left: 0%;
-    bottom: 0px;
+    text-align: center;
+    position: fixed;    
+    left: 0;
+    bottom: 0;
     width: 100%;
-    
 }
 
-
-p{
+p {
     color: green;
 }
 
-article p{
+article p {
     color: blue;
 }
 
-#noticia{
+#noticia {
     color: brown;
 }
 
-.titulo{
-    color: blueviolet;
-    
+.titulo {
+    color: blueviolet;   
 }
+
+.textoCentrado {
+    text-align: center;
+}
+
+.textoDerecha {
+    text-align: right
+}
+
+tbody tr:nth-child(odd) {
+    background-color: green
+}
+
+tbody tr:nth-child(even) {
+    background-color: white
+}
+
+/* Comienza la definición del menú */
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 992px;
+    margin: 0 auto;
+}
+
+.nav-link {
+    color: white;
+    text-decoration: none;
+}
+
+.nav-menu {
+    display: flex;
+    margin-right: 40px;
+    list-style: none;
+    line-height: 80px;
+}
+
+.nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+}
+
+.nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 8px;
+}
+
+.nav-menu-link:hover {
+    background-color: #024070;
+    font-size: 22px;
+    transition: 0.5s;
+}
+
+.logo {
+   font-size: 30px;
+   font-weight: bold;
+   padding: 0 40px;
+   line-height: 80px;
+}
+
+
+
 
