--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
         <meta charset=¨"UTF-8"/>
      </head>
     <body>
-        <div>Bienvenido al mundo Spring</div>
-        <p th:text="Hola">Adios</p>
-        <p>[[${mensaje}]]</p>
+        <h2>Listado de clientes</h2>
+        <br>
+        <hr>
+          <a th:href="@{/cliente/nuevo} ">Nuevo cliente</a>
+               
         
+    <div th:if="${clientes !=null and !clientes.empty}">
         <table border="0">
             <thead>
                 <tr>
@@ -24,9 +27,17 @@
                     <td>[[${cliente.apellidos}]]</td>
                     <td>[[${cliente.correo}]]</td>
                     <td>[[${cliente.telefono}]]</td>
+                    <td> <a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}">Eliminar</a> </td>
+                    <td> <a th:href="@{/cliente/modificar/} + ${cliente.idCliente}">Modificar</a> </td>
+                
                 </tr>
             </tbody>
         </table>
-
+    </div>
+         <div th:if="${clientes ==null or clientes.empty}">
+       
+             <h3>No hay clientes que mostrar</h3>
+         </div>
+        
     </body>
 </html>
