--- a/src/main/resources/templates/Cliente/fragmentos.html
+++ b/src/main/resources/templates/Cliente/fragmentos.html
@@ -53,7 +53,8 @@
                             <div class="modal-body">
                                 <div class="mb-3">
                                     <label for="nombre">Nombre</label>
-                                    <input type="text" class="form-control" name="nombre" required="true">
+                                    <input type="text" class="form-control" 
+                                           name="nombre" required="true">
                                 </div>
                                 <div class="mb-3">
                                     <label for="apellidos">Apellidos</label>
