--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -26,6 +26,12 @@
                             <li class="nav-item px-2">
                                 <a class="nav-menu-link nav-link" th:href="@{/servicio/listado}">Servicios</a>
                             </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">Categoria</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/articulo/listado}">Articulo</a>
+                            </li>
                         </ul>                        
                     </div>                    
                 </div>
